RS1F2-208
Implemented RecipeController methods and completed tests